<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visualizer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="drew@todo.todo">drew</maintainer>
  <license>TODO: License declaration</license>

  <depend>deep_orange_msgs</depend>
  <depend>raptor_dbw_msgs</depend>
  <depend>autoware_auto_msgs</depend>
  <depend>novatel_gps_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
